// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading Heading component using <Text> component properties 1`] = `
.c0 {
  color: #4f6f8f;
  font-size: 24px;
  font-weight: 700;
  line-height: 1.25;
  text-align: center;
  margin: 0px;
}

<h3
  className="c0"
  color="gray"
/>
`;

exports[`Heading Heading component with default theme font size, when "fontSize" prop not used 1`] = `
.c0 {
  font-size: 24px;
  font-weight: 700;
  line-height: 1.25;
  margin: 0px;
}

<h3
  className="c0"
/>
`;

exports[`Heading Heading component with h1-h6 dot-notation 1`] = `
<h1
  className=""
/>
`;

exports[`Heading Heading component with h1-h6 dot-notation 2`] = `
<h2
  className=""
/>
`;

exports[`Heading Heading component with h1-h6 dot-notation 3`] = `
<h3
  className=""
/>
`;

exports[`Heading Heading component with h1-h6 dot-notation 4`] = `
<h4
  className=""
/>
`;

exports[`Heading Heading component with h1-h6 dot-notation 5`] = `
<h5
  className=""
/>
`;

exports[`Heading Heading component with h1-h6 dot-notation 6`] = `
<h6
  className=""
/>
`;

exports[`Heading renders 1`] = `
.c0 {
  font-size: 24px;
  font-weight: 700;
  line-height: 1.25;
  margin: 0px;
}

<h3
  className="c0"
/>
`;
